--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="shortcut icon" href="img/logo.png"> -->
     <title>LAYFLIX</title>
     <link rel="stylesheet" href="css/styles_index.css">
+    <script src="https://kit.fontawesome.com/ddb7f94e9a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -107,7 +108,25 @@
             </div>
         </div>
     </div>
-
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="footer-follow">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                    <div class="footer-copyright">
+                        <p>Copyright © 2022-2023. All Rights Reserved. <a href="index.html" target="_blank">LayFlix</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
