--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -9,7 +9,6 @@
     <title>LAYFLIX</title>
     <link rel="stylesheet" href="../css/styles_subscribe.css">
     <script src="https://kit.fontawesome.com/ddb7f94e9a.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -33,168 +32,185 @@
         <img width="250px" src="../img/subscribe/logo-film.png" alt="">
         <p>A raíz de la desaparicion de un niño, un pueblo desvela un misterio relacionado con experimentos secretos, fuerzas sobrenaturales aterradoras y una niña muy extraña.</p>
     </div>
-    <main>
-        <div class="contenido">
-            <div class="top-list">
-                <h4>🔥 en Layflix</h4>
-                <hr>
-                <div class="netflix-row">
-                    <ul class="netflix-row--inner">
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula2.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula2.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
-                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
-                    </ul>
+    <div class="contenido">
+        <div class="top-list">
+            <h4>🔥 en Layflix</h4>
+            <hr>
+            <div class="netflix-row">
+                <ul class="netflix-row--inner">
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula2.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula2.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
+                </ul>
+            </div>
+        </div>
+        <div class="catalogo">
+            <h4>Terrorificas 👻</h4>
+            <hr>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="catalogo">
-                <h4>Terrorificas 👻</h4>
-                <hr>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <h4>Comedia 😂</h4>
+            <hr>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <h4>Comedia 😂</h4>
-                <hr>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <h4>Romanticas ❤️</h4>
+            <hr>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <h4>Romanticas ❤️</h4>
-                <hr>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="four-column">
-                    <div class="container">
-                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
-                        <p>Hola</p>
-                        <div class="middle">
-                            <div class="text">
-                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
-                            </div>
+            </div>
+            <div class="four-column">
+                <div class="container-catalogo">
+                    <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                    <p>Hola</p>
+                    <div class="middle">
+                        <div class="text">
+                            <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="footer-follow">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                    <div class="footer-copyright">
+                        <p>Copyright © 2022-2023. All Rights Reserved. <a href="index.html" target="_blank">LayFlix</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
