--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="footer-follow">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#footer"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#footer"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#footer"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#footer"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#footer"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#footer"><i class="fa fa-youtube"></i></a></li>
                     </ul>
                     <div class="footer-copyright">
                         <p>Copyright © 2022-2023. All Rights Reserved. <a href="index.html" target="_blank">LayFlix</a></p>
