--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -34,8 +34,7 @@
     </div>
     <div class="contenido">
         <div class="top-list">
-            <h4>🔥 en Layflix</h4>
-            <hr>
+            <h4>Top en Layflix</h4>
             <div class="netflix-row">
                 <ul class="netflix-row--inner">
                     <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
@@ -52,8 +51,7 @@
             </div>
         </div>
         <div class="catalogo">
-            <h4>Terrorificas 👻</h4>
-            <hr>
+            <h4>Terrorificas</h4>
             <div class="four-column">
                 <div class="container-catalogo">
                     <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
@@ -98,8 +96,7 @@
                     </div>
                 </div>
             </div>
-            <h4>Comedia 😂</h4>
-            <hr>
+            <h4>Comedia</h4>
             <div class="four-column">
                 <div class="container-catalogo">
                     <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
@@ -144,8 +141,7 @@
                     </div>
                 </div>
             </div>
-            <h4>Romanticas ❤️</h4>
-            <hr>
+            <h4>Romanticas</h4>
             <div class="four-column">
                 <div class="container-catalogo">
                     <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
